--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/northcoders/be-nc-games#readme",
   "dependencies": {
     "dotenv": "^16.0.0",
+    "express": "^4.18.2",
     "pg": "^8.7.3",
     "pg-format": "^1.0.4",
     "supertest": "^6.3.0"
