--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "bc-nc-games",
   "main": "index.js",
   "scripts": {
+    "start": "node listen.js",
+    "seed:prod":"NODE_ENV=production DATABASE_URL=$(heroku config:get DATABASE_URL) npm run seed",
     "setup-dbs": "psql -f ./db/setup.sql",
     "seed": "node ./db/seeds/run-seed.js",
     "test": "jest",
